...
            android:paddingTop="20dp"
            android:text="Du hast noch keine Ausleihen!"
            android:textSize="28sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/rental_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

    </LinearLayout>

...
